Fix ios scroll bouncing with html overflow hidden

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -17,7 +17,7 @@ body {
 }
 
 html {
-  overflow-y: auto;
+  overflow-y: hidden;
 }
 
 * {
